stylesheet.css
/*@import "rouge-base16-dark";*/
@import url('https://fonts.googleapis.com/css?family=Chivo:900');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap');

:root {
  --mainFont: 'DM Sans';
	--brBrown: #401f20;
	--brPink1: #e21380;
	--brPink2: #F2529D;
  --brOffWhite: #eee1d8;
	--brBlue: #69D2F1;
}

body{
	/* font-family: 'Helvetica Neue', Helvetica, Arial, serif; */
	font-family: var(--mainFont);
	line-height: 1.5;
	font-size: 1.25rem;
	color: var(--brBrown);
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
	/* background: #e7e7e7 url(images/body-bg.png) 0 0 repeat; */
	background-color: #fcfcfc;
}

#footer {
	background-color: var(--brBrown);
	color: var(--brOffWhite) !important;
	padding: 2rem 5rem;
}

#menuBar {
	/* background-color: #fff; */
	color: #f0f9ff;
	/* padding: 0px 1rem; */
	max-height: 4rem;
	border-radius: 0px;
	margin: 0px;
}

.brownBar {
	background-color: var(--brBrown);
	color: var(--brOffWhite);
	text-align: center;
	font-family: 'Poppins';
	line-height: 3rem;
	text-shadow: none;
	padding: 0px;
	margin: 0px;
}

.textbox {
	padding: 1rem;
	margin: auto;
	width: 75%;
  position: relative;
  outline: none;
  border: 5px solid #cdcdcd;
  border-color: var(--brPink1);
  background-color: white;
	text-align: center;
	font-size: 1.3rem;
	border-radius: 25px;
	border-style: dotted;
	border-width: thick;
}

.largeFont1 {
	font-size: 1.3rem !important;
}

.biggerfont {
	font-size: 150%;
	font-weight: 600 !important;
}

.lineHeight2 {
	line-height: 2 !important;
}

.footerLink {
	color: var(--brBlue);
	/* text-decoration: underline; */
	text-shadow: none;
}

.footerLink:hover {
	color: var(--brPink2) !important;
	/* text-decoration: underline; */
}

.myLink {
	color: var(--brPink1);
	/* text-decoration: underline; */
}

.myLink:hover {
	color: var(--brBlue) !important;
	/* text-decoration: underline; */
}

.myListItem {
	list-style-type: disc;
	color: var(--brPink1);
}

.activeLogo.item:hover {
	background-color: rgba(232,232,232, 0.5) !important;
}

h1, h2 {
	font-family: 'Poppins';
}

a.item {
	font-family: var(--mainFont);
}

a.item.active {
	color: var(--brPink1) !important;
	background-color: rgba(242,82,157,0.08) !important;
}

a.item:hover {
	color: var(--brBlue) !important;
	background-color: rgba(105,210,241,0.08) !important;
}

a.ui.header {
	font-size: 1rem !important;
	font-family: var(--mainFont) !important;
	font-weight: 500;
	color: var(--brBrown) !important;
	text-align: center;
}

a.ui.header:hover {
	color: var(--brPink1) !important; /* bright pink */
}

.decopacImage {
	height: 150px !important;
	object-fit: contain;
	background-color: white;
}

.pink {
	color: #F5AFE5;
	font-weight: bold;
}

.myindent1 {
	margin-block-start: 1em;
    margin-block-end: 1em;
    padding-inline-start: 20px;
}

.myindent2 {
	padding-inline-start: 40px;
}

li {
	list-style: none;
}

a {
	color: var(--brBrown); /* brown */
}

a:hover {
	color: var(--brPink1) !important; /* bright pink */
}

hr {
	border: 0;
	height: 1px;
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(175, 175, 175, 0.75), rgba(0, 0, 0, 0));
}

/* @media only screen {
	body {
		line-height: 1.5;
	}

	details {
		font-size: 1.8rem;
	}

	a, p, summary {
		font-size: 2.75rem;
	}

	a.item, h2 {
		font-size: 3.0rem;
	}

	h1 {
		font-size: 3.5rem;
	}
} */

